product_docs/docs/warehousepg/7.4/ref_guide/modules/edb_modules/index.mdx
---
title: EDB provided modules
navigation:
  - pgaa
  - pgaudit
  - pgfs
  - pgvector
  - user_profile
  - whpg-anonymizer
  - whpg_fdw
originalFilePath: >-
  https://github.com/warehouse-pg/whpg-docs/blob/main/docs/docs/7x/ref_guide/modules/edb_modules/index.mdx
indexCards: extra
editTarget: originalFilePath

---

EDB-provided modules deliver a suite of enterprise-grade extensions specifically engineered to enhance the security, performance, and manageability of your WarehousePG cluster. Backed by 24x7 expert support, these modules ensure your environment meets the rigorous demands of business-critical, petabyte-scale data warehousing.

EDB provides the following modules:


-   [PGAA](pgaa.mdx) - Enables distributed analytical queries against object storage directly from WarehousePG, with support for Parquet, Delta Lake, and Iceberg formats.
-   [pgAudit](pgaudit.mdx) - Provides detailed session and object audit logging for WarehousePG.
-   [PGFS](pgfs.mdx) - Provides the storage layer for object storage connectivity, including credential management for S3, GCS, and Azure. Required dependency of PGAA.
-   [pgvector](pgvector.mdx) - Provides vector similarity search capabilities for WarehousePG that enable searching, storing, and querying machine language-generated embeddings at large scale.
-   [user_profile](user_profile.mdx) - Provides password quality checking and policy definition for WarehousePG.
-   [whpg-anonymizer](whpg-anonymizer.mdx) - Provides dynamic data masking and static data anonymization for WarehousePG.
-   [whpg_fdw](whpg_fdw.mdx) - Provides a foreign data wrapper (FDW) for accessing data stored in a remote WarehousePG cluster.

## Downloading and installing an extension

You must install the extension on each host in your WarehousePG cluster.

1. From the coordinator, download the package from the EDB repository:

    <TabContainer syncKey="download">
    <Tab title="RHEL 8, 9">

    ```bash
    export EDB_SUBSCRIPTION_TOKEN=<your-token>
    export EDB_REPO=gpsupp
    curl -1sSLf "https://downloads.enterprisedb.com/$EDB_SUBSCRIPTION_TOKEN/$EDB_REPO/setup.rpm.sh" | sudo -E bash
    sudo dnf download edb-whpg<major_version>-<extension_name>
    ```
    
    </Tab>
    <Tab title="RHEL 7">

    ```bash
    export EDB_SUBSCRIPTION_TOKEN=<your-token>
    export EDB_REPO=gpsupp
    curl -1sSLf "https://downloads.enterprisedb.com/$EDB_SUBSCRIPTION_TOKEN/$EDB_REPO/setup.rpm.sh" | sudo -E bash
    sudo yumdownloader edb-whpg<major_version>-<extension_name>
    ```

    </Tab>
    </TabContainer>

    Where:
    - `<your-token>` is the token you received when you registered for the EDB subscription.
    - `<major_version>` is your WHPG version (6 or 7).
    - `<extension_name>` is the name of the extension you want to install.

1. Create a file `all_hosts` on your WHPG coordinator, which lists all hosts in the WHPG cluster. For example:

    ```ini
    cdw
    scdw
    sdw1
    sdw2
    sdw3
    ```

1. From the coordinator, use the `gpsync` utility to transfer the package to all hosts in the cluster and then use the `gpssh` utility to install the package:

    <TabContainer syncKey="install">
    <Tab title="RHEL 8, 9">

    ```bash 
    gpsync -f all_hosts <package-name> =:/tmp
    gpssh -f all_hosts -e 'sudo dnf install -y /tmp/<package-name>'
    ```
    
    </Tab>
    <Tab title="RHEL 7">

    ```bash 
    gpsync -f all_hosts <package-name> =:/tmp
    gpssh -f all_hosts -e 'sudo yum install -y /tmp/<package-name>'
    ```

    </Tab>
    </TabContainer>

  Where `<package-name>` is the name of the package file you downloaded.
